Adds additional protection to potentially critical user inputs.